k8s-advanced-ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: (ganti sesuai dengan format yg diminta)
spec:
  selector:
    app: (ganti sesuai dengan format yg diminta)
  ports:
    - port: 80
      targetPort: 5678
